[gd_scene load_steps=8 format=2]

[ext_resource path="res://v1.1 dungeon crawler 16x16 pixel pack/heroes/knight/knight_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://sfx/knight_die.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/knight_take_damage.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 70.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.0
height = 5.0

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
take_dmg_sfx = ExtResource( 4 )
die_sfx = ExtResource( 3 )

[node name="GuardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GuardArea"]
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Graphix" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Graphix"]
texture = ExtResource( 1 )

[node name="HPBar" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( -6.43511, -10.0788 )
points = PoolVector2Array( 0, 0, 12, 0 )
width = 2.0
default_color = Color( 0.701961, 0, 0.0823529, 1 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 250.0
[connection signal="body_entered" from="GuardArea" to="." method="_on_GuardArea_body_entered"]
[connection signal="body_exited" from="GuardArea" to="." method="_on_GuardArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_Timer_timeout"]
